# cppGame

./: CMakeLists.txt  Game.sln
Game/: CMakeLists.txt  Game.vcxproj  game  game.cpp  game.h  main.cpp
Game/res/: xd2.xcf
Game/shaders/: colorShading.frag.txt  colorShading.vert.txt
Game/src/: Menu.cpp  Menu.h  Snapshot.cpp  Snapshot.h
Game/src/entities/: Bullet.cpp  Bullet.h  Player.cpp  Player.h  entity.cpp  entity.h
MattEngine/: CMakeLists.txt  Camera2D.cpp  Camera2D.h  GLSLProgram.cpp  GLSLProgram.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  MattEngine.vcxproj  ResourceManager.cpp  ResourceManager.h  SpriteBatch.cpp  SpriteBatch.h  TextureCache.cpp  TextureCache.h  collisionBox.cpp  collisionBox.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  vector2.cpp  vector2.h  vertex.h  window.cpp  window.h
Network/: Address.cpp  Address.h  CMakeLists.txt  Connection.cpp  Connection.h  Message.cpp  Message.h  Network.vcxproj  Socket.cpp  Socket.h  common.h
Server/: CMakeLists.txt  Player.cpp  Player.h  Server.cpp  Server.h  Server.vcxproj  entity.cpp  entity.h  sv_main.cpp
